--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <% @articles.each do |article| %>
-    <li>
+    <li class = "article">
       <%= article.title %><br />
       <%= article.content %><br />
       Written by <%= article.author %> at <%= article.created_at.strftime("%Y-%m-%d") %>
