--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,7 +1,8 @@
 <ul>
   <% @articles.each do |article| %>
     <li class = "article">
-      <%= article.title %><br />
+      <%= article.title %>
+      <%= #link_to article.title, article_path(article) %><br />
       <%= article.content %><br />
       Written by <%= article.author %> at <%= article.created_at.strftime("%Y-%m-%d") %>
     </li>
