--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
 <%= @article.title %>
 <%= @article.content %>
 
-<%= form_for [@article] do |f| %>
-  <%= f.label 'Add a comment' %>
+<%= form_for [@article, @comment] do |f| %>
+  <%= f.label :comment %>
   <%= f.text_field :comment %>
-  <%= f.label 'Your e-mail' %>
+  <%= f.label :email %>
   <%= f.email_field :email %>
   <%= f.submit 'Submit' %>
 <% end %>
