--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <%= @article.title %>
 <%= @article.content %>
 
-<%= form_for [@article, @comment] do |f| %>
+<%= form_for [@article, @article.comments.new] do |f| %>
   <%= f.label :comment %>
   <%= f.text_field :comment %>
   <%= f.label :email %>
