--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 <%= @article.content %><br />
 <% @article.comments.each do |comment| %>
   <%= comment.comment %><br />
-  <%= comment.email %><br />
+  <%= mail_to comment.email %><br />
 <% end %>
 
 <%= form_for [@article, @article.comments.new] do |f| %>
